--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,12 +6,25 @@
 trigger:
 - master
 
+
+
 pool:
   vmImage: 'ubuntu-latest'
 
 variables:
   buildConfiguration: 'Release'
-
+  azureSubscription: <Name of the Azure subscription>
+  appName: TestPipelineApp1
+  
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+
+- task: AzureWebApp@1
+  displayName: 'Azure Web App Deploy'
+  inputs:
+    azureSubscription: $(azureSubscription)
+    appType: webAppLinux
+    appName: $(appName)
+    package: $(System.ArtifactsDirectory)/**/*.zip
